added main website

--- a/Wildeye_Webseite/package.json
+++ b/Wildeye_Webseite/package.json
@@ -7,14 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@vue-leaflet/vue-leaflet": "^0.10.1",
-    "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
     "core-js": "^3.8.3",
-    "leaflet": "^1.9.4",
-    "leaflet.heat": "^0.2.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "bootstrap-icons": "^1.11.3",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "leaflet.heat": "^0.2.0",
+    "leaflet": "^1.9.4",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
