--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -16,7 +16,8 @@
     "leaflet": "^1.9.4",
     "bootstrap": "^5.3.3",
     "axios": "^1.7.9",
-    "@material/web": "^2.2.0"
+    "@material/web": "^2.2.0",
+    "js-cookie": "^3.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
