--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -7,17 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "bootstrap-icons": "^1.11.3",
-    "@vue-leaflet/vue-leaflet": "^0.10.1",
-    "leaflet.heat": "^0.2.0",
-    "leaflet": "^1.9.4",
-    "bootstrap": "^5.3.3",
-    "axios": "^1.7.9",
     "@material/web": "^2.2.0",
-    "js-cookie": "^3.0.5"
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
