added image search and filter functionality, fixed camera settings API connection.

--- a/WebApp/src/assets/imageSearchSettings.json
+++ b/WebApp/src/assets/imageSearchSettings.json
@@ -34,15 +34,15 @@
       {
         "type": "select",
         "name": "Sort by",
-        "options": ["Date", "Name"],
-        "value": "Name",
+        "options": ["id", "title", "hearted"],
+        "value": "hearted",
         "required": true
       },
       {
         "type": "select",
         "name": "Sort order",
-        "options": ["Ascending", "Descending"],
-        "value": "Ascending",
+        "options": ["asc", "desc"],
+        "value": "desc",
         "required": true
       }
     ]
