added pwa manifest

--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -16,11 +16,13 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0"
   },
